--- a/Bem-vindo.css
+++ b/Bem-vindo.css
@@ -1,26 +1,39 @@
 body{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        min-height: 100vh;
-        background: url(img.jpg) no-repeat;
-        background-size: cover;
-        background-position: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background: url(img.jpg) no-repeat;
+    background-size: cover;
+    background-position: center;
 }
 
 .titulo{
-    top: 0;
-    left: 0;
-    position: absolute;
-    text-align: center;
-    font-size: 300px;
+font-family: Arial, Helvetica, sans-serif;
+top: 0;
+left: 280px;
+position: absolute;
+text-align: center;
+font-size: 50px;
+color: white;
 }
 
 .Proxima-Pag{
-    left: 90%;
-    top: 95%;
-    position: absolute;
-    width: 700px;
-    height: 100px;
-    font-size: 60px;
+left: 85%;
+top: 94%;
+position: absolute;
+width: 300px;
+height: 50px;
+font-size: 40px;
+text-decoration: none;
+font-size: 30px;
 }
+
+.Proxima-Pag:hover{
+    background-color: rgb(192, 191, 191);
+    outline: none;
+    border: none;
+    border-radius: 8px;
+}
+
+
