--- a/cadastro.css
+++ b/cadastro.css
@@ -66,3 +66,8 @@ body {
 .cadastro-enviado:hover {
     background-color: #45a049;
 }
+
+.list-cad{  
+    text-align: center;
+    margin-top: 20px;
+}
