--- a/tela-inicial.css
+++ b/tela-inicial.css
@@ -48,3 +48,13 @@ header {
     cursor: pointer;
     padding: 10px 15px;
 }
+
+.cart-img{
+    width: 80px;
+    height: 90px;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    z-index: 9999;
+    cursor: pointer;
+}
