--- a/cadastro.css
+++ b/cadastro.css
@@ -11,12 +11,13 @@ body {
 
 .form-container {
     position: relative;
-    width: 400px;
-    padding: 20px;
+    width: 420px;
+    padding: 40px 50px;
     background-color: white;
-    border-radius: 8px;
+    border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     overflow: hidden;
+    background: transparent;
 }
 
 .form-container::before {
@@ -26,7 +27,6 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('pica-pau.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -37,6 +37,7 @@ body {
 .cadastro {
     display: flex;
     flex-direction: column;
+   opacity: 0.4;
 }
 
 .form-cadastro {
@@ -46,12 +47,14 @@ body {
 .form-cadastro input {
     width: 100%;
     padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+    border: 1px solid white;
+    border-radius: 30px;
 }
+
 
 .Envia-Cadastro {
     text-align: center;
+    text-decoration: none;
 }
 
 .cadastro-enviado {
@@ -61,13 +64,17 @@ body {
     background-color: #4CAF50;
     color: white;
     cursor: pointer;
+    background: white;
 }
 
 .cadastro-enviado:hover {
     background-color: #45a049;
+    text-decoration: none;
 }
+
 
 .list-cad{  
     text-align: center;
     margin-top: 20px;
+    color: white;
 }
