--- a/Bem-vindo.css
+++ b/Bem-vindo.css
@@ -27,6 +27,8 @@ height: 50px;
 font-size: 40px;
 text-decoration: none;
 font-size: 30px;
+opacity: 0.4;
+cursor: pointer;
 }
 
 .Proxima-Pag:hover{
