--- a/Bem-vindo.css
+++ b/Bem-vindo.css
@@ -18,6 +18,17 @@ font-size: 50px;
 color: white;
 }
 
+h2{
+    position: absolute;
+    font-family: Arial, Helvetica, sans-serif;
+    top: 94%;
+    margin: 20px;
+    font-size: large;
+    height: 40px;
+    color: white;
+    left: 0.2%;
+}
+
 .Proxima-Pag{
 left: 85%;
 top: 94%;
