--- a/Bem-vindo.css
+++ b/Bem-vindo.css
@@ -3,19 +3,21 @@ body{
     justify-content: center;
     align-items: center;
     min-height: 100vh;
+
     background: url(img.jpg) no-repeat;
     background-size: cover;
     background-position: center;
 }
 
 .titulo{
-font-family: Arial, Helvetica, sans-serif;
-top: 0;
-left: 280px;
-position: absolute;
-text-align: center;
-font-size: 50px;
-color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    top: 0;
+    left: 270px;
+    position: absolute;
+
+    text-align: center;
+    font-size: 50px;
+    color: white;
 }
 
 h2{
@@ -30,24 +32,35 @@ h2{
 }
 
 .Proxima-Pag{
-left: 85%;
-top: 94%;
-position: absolute;
-width: 300px;
-height: 50px;
-font-size: 40px;
-text-decoration: none;
-font-size: 30px;
-opacity: 0.4;
-cursor: pointer;
-color: white;
+    left: 80%;
+    top: 94%;
+    position: absolute;
+    width: 300px;
+    height: 50px;
+    
+    font-size: 40px;
+    text-decoration: none;
+    font-size: 30px;
+    
+    opacity: 0.4;
+    cursor: pointer;
+    color:black;
+    border: none;
+    border-radius: 8px;
+    background-color: white;
 }
 
 .Proxima-Pag:hover{
+    color: rgb(255, 255, 255);
     background: transparent;
     outline: none;
     border: none;
     border-radius: 8px;
 }
 
-
+.description{
+    margin-left: 10px;
+    top: 80%;
+    position: absolute;
+    font-family: Arial, Helvetica, sans-serif;
+}
