--- a/aa/style.css
+++ b/aa/style.css
@@ -95,6 +95,11 @@ body {
     .titulo {
         text-align: center;
     }
+
+    .slider img{
+        flex-wrap: wrap; 
+        width: 100%;
+    }
 }
 
 .bx-menu {
@@ -219,6 +224,43 @@ body {
     opacity: 1;
     visibility: visible;
     z-index: 10;
+}
+
+.slider2{
+    display: block;
+    height: 350px;
+    width: 600px;
+    margin: auto;
+    margin-top: 20px;
+    position: absolute;
+    top: 0%;
+    left: 30%;
+}
+
+.slider2 img{
+    margin: auto;
+    height: 50%;
+    width: 50%;
+    vertical-align: top;
+    mix-blend-mode: multiply;
+}
+
+.slider2 li input:checked ~ img{
+    opacity: 1;
+    visibility: visible;
+    z-index: 10;
+}
+
+.slider2 li:nth-child(4) label {
+    left: 10px;
+}
+
+.slider li:nth-child(5) label {
+    left: 10px;
+}
+
+.slider li:nth-child(6) label {
+    left: 10px;
 }
 
 .adidas {
